# data_logger_web

./: README.md  data.csv  pyproject.toml
data_logger_django/: consultancy_data1.csv  manage.py
data_logger_django/data_logger_django/: asgi.py  settings.py  urls.py  wsgi.py
data_logger_django/data_logger_tkinter/: data.csv  main.py  modules.py
data_logger_django/data_logger_ui/: apps.py  forms.py  modules.py  urls.py  views.py
data_logger_django/data_logger_ui/templates/: base.html  home.html
data_logger_django/data_logger_ui/templates/partials/: footer.html  head.html  header.html  navigation.html
