[tool.poetry]
name = "data_logger"
version = "0.1.0"
description = ""
authors = ["Somen <somenbg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
django = "^3.0"
django-crispy-forms = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
